SERVER-93369 Fix lock ordering in TextMatchExpression (#26545)

GitOrigin-RevId: 470d9037344f8b662d83aef6d15e854c38ee0f78